# halal-checker-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
docs/: CHECKPOINT.md  ERRORS.md
docs/learn/: 01-overview.md
docs/superpowers/plans/: 2026-06-01-halal-classification-engine.md  2026-06-02-account-recovery.md  2026-06-02-accounts-core.md  2026-06-02-api-keys.md  2026-06-02-dos-input-hardening.md  2026-06-02-roles-audit.md  2026-06-03-barcode-scan.md  2026-06-03-classify-screen.md  2026-06-03-design-system.md  2026-06-03-fail-closed-prod.md  2026-06-03-history-screen.md  2026-06-03-image-response-hardening.md  2026-06-03-image-scan.md  2026-06-03-mobile-foundation.md  2026-06-03-prod-exposure.md  2026-06-03-ratelimit-hardening.md  2026-06-03-scan-history.md  2026-06-04-backend-deploy-render.md
docs/superpowers/specs/: 2026-06-01-halal-api-design.md  2026-06-01-halal-classification-engine-design.md  2026-06-02-account-recovery-design.md  2026-06-02-accounts-core-design.md  2026-06-02-api-keys-design.md  2026-06-02-dos-input-hardening-design.md  2026-06-02-hardening.md  2026-06-02-ocr-label-scanning.md  2026-06-02-openfoodfacts-lookup.md  2026-06-02-roles-audit-design.md  2026-06-02-translation.md  2026-06-03-barcode-scan-design.md  2026-06-03-classify-screen-design.md  2026-06-03-design-system-design.md  2026-06-03-fail-closed-prod-design.md  2026-06-03-history-screen-design.md  (+7 more)
examples/: demo.py
mobile/: README.md  jest.config.js  package-lock.json  package.json
mobile/src/: config.ts
src/halal_scanner/: __init__.py  classifier.py  db.py  gemma.py  history.py  models.py  normalizer.py  ocr.py  openfoodfacts.py  rulebook.py  translator.py
tests/: conftest.py  test_account_tokens.py  test_admin_api.py  test_api.py  test_audit.py  test_auth_api.py  test_auth_service.py  test_classifier.py  test_db_url.py  test_email.py  test_gemma.py  test_history.py  test_history_api.py  test_keys.py  test_keys_api.py  test_limits.py  test_models.py  test_normalizer.py  test_ocr.py  test_openfoodfacts.py  test_passwords.py  test_recovery.py  test_recovery_api.py  test_roles.py  test_rulebook.py  test_security.py  test_tokens.py  test_translator.py
(+68 files in other folders)
