[project]
name = "halal-scanner"
version = "0.1.0"
description = "Halal/non-halal/shubhah classification engine"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0", "requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
