[project]
name = "halal-scanner"
version = "0.1.0"
description = "Halal/non-halal/shubhah classification engine"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
# Real OCR for POST /scan-image. Also requires the system `tesseract` binary.
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
